--- a/src/assets/css/Inventaire.css
+++ b/src/assets/css/Inventaire.css
@@ -19,7 +19,7 @@
   align-items: center;
   gap: 15px;
   z-index: 50;
-  overflow-y: auto;
+  /* overflow-y: auto; */
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
 }
 
